--- a/.github/workflows/astro-gh-pages.yml
+++ b/.github/workflows/astro-gh-pages.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           pnpm i
           pnpm build
-          mv build _site
+          mv dist _site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
